-6.0.6 (2014-03-22)
- Fix a timezone issue that could cause the script to exit.
- Fix an off-by-one error in the DB-upgrade code that could sometimes cause a failure.

-6.0.5 (2014-03-22)
- Added a new today-week TV Guide xml file and lots of new skinning values.  The new guide can also show yesterday's episodes, if desired.
- Add a means for the user to request new info for a single show.
- Restored the population of the Classification info.
- Improved DST timezone support and computation of Airtime between timezones, including better handling of Airtime changes.
- Improved the episode search when we're trying to find the show's website ID.  This includes multi-language searching and better handling of utf-8 characters.
- Improve a month-period update: work around some (unexpectedly) missing episode-change data in the month-update file.
- If the interactive update stops fetching data due to failures, mention it to the user in an "OK" dialog.
- Added the "updateshow=TVShowTitle" option to re-grab the current data for a single show.
- Make the background process auto-start a replacement if it notices a version change.
- Don't put so much data into the debug log by default.  Lots of other logging tweaks.
- Updated language files from Transifex.

-6.0.4 (2014-03-05)
- Updated language files from Transifex.
- A few more tweaks to the missing-artwork grabber.
- Improve error handling when refreshing the country.db file.

-6.0.3 (2014-03-02)
- Fix a potential script crash with a background query not triggering a DB update (if it is needed).
- Make the new date format a setting boolean.
- Help the user find missing artwork for their list-item icons.
- A few more minor improvements to the error-handling logic.

-6.0.2 (2014-02-28)
- Fix timezone crash on systems that can't handle a date prior to the unix epoch in the tz computations.
- Supply an image for a list-item entry in the Guide that would otherwise be a blank selection area.