@@ -1,6 +1,8 @@
 -6.0.6 (2014-03-22)
-- Fix a timezone issue that could cause the script to exit.
+- Fix a couple timezone issues that could cause the script to exit, including yet another bug in dateutil.
 - Fix an off-by-one error in the DB-upgrade code that could sometimes cause a failure.
+- Make the backend processing capable of bringing in updated data.
+- Tweak am/pm year format a bit.
 
 -6.0.5 (2014-03-22)
 - Added a new today-week TV Guide xml file and lots of new skinning values.  The new guide can also show yesterday's episodes, if desired.
